// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Graphic/ino-img-list EncloseLabel smoke-test 1`] = `
<div id="root-inner">
  <ino-img-list enclose-label="true"
                masonry="false"
                class="hydrated"
  >
    <ul class="mdc-image-list mdc-image-list--with-text-protection">
      <ino-img alt="beach"
               label="Label"
               img-list-item
               src="static/media/beach.1432d4b3.jpg"
               class="mdc-image-list__item hydrated"
      >
        <div class="mdc-image-list__image-aspect-container">
          <img class="mdc-image-list__image"
               alt="beach"
               src="static/media/beach.1432d4b3.jpg"
          >
          <div class="ino-img__fallback-icon">
            <ino-icon class="ino-icon--color-scheme-primary hydrated">
            </ino-icon>
          </div>
        </div>
        <div class="mdc-image-list__supporting">
          <span class="mdc-image-list__label">
            Label
          </span>
        </div>
      </ino-img>
      <ino-img alt="waterfall"
               label="Label"
               img-list-item
               src="static/media/fjord.a789a6be.jpg"
               class="mdc-image-list__item hydrated"
      >
        <div class="mdc-image-list__image-aspect-container">
          <img class="mdc-image-list__image"
               alt="waterfall"
               src="static/media/fjord.a789a6be.jpg"
          >
          <div class="ino-img__fallback-icon">
            <ino-icon class="ino-icon--color-scheme-primary hydrated">
            </ino-icon>
          </div>
        </div>
        <div class="mdc-image-list__supporting">
          <span class="mdc-image-list__label">
            Label
          </span>
        </div>
      </ino-img>
      <ino-img alt="trondheim"
               label="Label"
               img-list-item
               src="static/media/forrest.0452b993.jpg"
               class="mdc-image-list__item hydrated"
      >
        <div class="mdc-image-list__image-aspect-container">
          <img class="mdc-image-list__image"
               alt="trondheim"
               src="static/media/forrest.0452b993.jpg"
          >
          <div class="ino-img__fallback-icon">
            <ino-icon class="ino-icon--color-scheme-primary hydrated">
            </ino-icon>
          </div>
        </div>
        <div class="mdc-image-list__supporting">
          <span class="mdc-image-list__label">
            Label
          </span>
        </div>
      </ino-img>
      <ino-img alt="forrest"
               label="Label"
               img-list-item
               src="static/media/liberty.ab8cbdf5.jpg"
               class="mdc-image-list__item hydrated"
      >
        <div class="mdc-image-list__image-aspect-container">
          <img class="mdc-image-list__image"
               alt="forrest"
               src="static/media/liberty.ab8cbdf5.jpg"
          >
          <div class="ino-img__fallback-icon">
            <ino-icon class="ino-icon--color-scheme-primary hydrated">
            </ino-icon>
          </div>
        </div>
        <div class="mdc-image-list__supporting">
          <span class="mdc-image-list__label">
            Label
          </span>
        </div>
      </ino-img>
      <ino-img alt="fjord"
               label="Label"
               img-list-item
               src="static/media/trondheim.7a9953d8.jpg"
               class="mdc-image-list__item hydrated"
      >
        <div class="mdc-image-list__image-aspect-container">
          <img class="mdc-image-list__image"
               alt="fjord"
               src="static/media/trondheim.7a9953d8.jpg"
          >
          <div class="ino-img__fallback-icon">
            <ino-icon class="ino-icon--color-scheme-primary hydrated">
            </ino-icon>
          </div>
        </div>
        <div class="mdc-image-list__supporting">
          <span class="mdc-image-list__label">
            Label
          </span>
        </div>
      </ino-img>
      <ino-img alt="liberty"
               label="Label"
               img-list-item
               src="static/media/waterfall.a7a46e49.jpg"
               class="mdc-image-list__item hydrated"
      >
        <div class="mdc-image-list__image-aspect-container">
          <img class="mdc-image-list__image"
               alt="liberty"
               src="static/media/waterfall.a7a46e49.jpg"
          >
          <div class="ino-img__fallback-icon">
            <ino-icon class="ino-icon--color-scheme-primary hydrated">
            </ino-icon>
          </div>
        </div>
        <div class="mdc-image-list__supporting">
          <span class="mdc-image-list__label">
            Label
          </span>
        </div>
      </ino-img>
    </ul>
  </ino-img-list>
</div>
`;

exports[`Graphic/ino-img-list Masonry smoke-test 1`] = `
<div id="root-inner">
  <ino-img-list enclose-label="false"
                masonry="true"
                class="hydrated"
  >
    <ul class="mdc-image-list mdc-image-list--masonry">
      <ino-img alt="beach"
               label="Label"
               img-list-item
               src="static/media/beach.1432d4b3.jpg"
               class="mdc-image-list__item hydrated"
      >
        <div class>
          <img class="mdc-image-list__image"
               alt="beach"
               src="static/media/beach.1432d4b3.jpg"
          >
          <div class="ino-img__fallback-icon">
            <ino-icon class="ino-icon--color-scheme-primary hydrated">
            </ino-icon>
          </div>
        </div>
        <div class="mdc-image-list__supporting">
          <span class="mdc-image-list__label">
            Label
          </span>
        </div>
      </ino-img>
      <ino-img alt="waterfall"
               label="Label"
               img-list-item
               src="static/media/fjord.a789a6be.jpg"
               class="mdc-image-list__item hydrated"
      >
        <div class>
          <img class="mdc-image-list__image"
               alt="waterfall"
               src="static/media/fjord.a789a6be.jpg"
          >
          <div class="ino-img__fallback-icon">
            <ino-icon class="ino-icon--color-scheme-primary hydrated">
            </ino-icon>
          </div>
        </div>
        <div class="mdc-image-list__supporting">
          <span class="mdc-image-list__label">
            Label
          </span>
        </div>
      </ino-img>
      <ino-img alt="trondheim"
               label="Label"
               img-list-item
               src="static/media/forrest.0452b993.jpg"
               class="mdc-image-list__item hydrated"
      >
        <div class>
          <img class="mdc-image-list__image"
               alt="trondheim"
               src="static/media/forrest.0452b993.jpg"
          >
          <div class="ino-img__fallback-icon">
            <ino-icon class="ino-icon--color-scheme-primary hydrated">
            </ino-icon>
          </div>
        </div>
        <div class="mdc-image-list__supporting">
          <span class="mdc-image-list__label">
            Label
          </span>
        </div>
      </ino-img>
      <ino-img alt="forrest"
               label="Label"
               img-list-item
               src="static/media/liberty.ab8cbdf5.jpg"
               class="mdc-image-list__item hydrated"
      >
        <div class>
          <img class="mdc-image-list__image"
               alt="forrest"
               src="static/media/liberty.ab8cbdf5.jpg"
          >
          <div class="ino-img__fallback-icon">
            <ino-icon class="ino-icon--color-scheme-primary hydrated">
            </ino-icon>
          </div>
        </div>
        <div class="mdc-image-list__supporting">
          <span class="mdc-image-list__label">
            Label
          </span>
        </div>
      </ino-img>
      <ino-img alt="fjord"
               label="Label"
               img-list-item
               src="static/media/trondheim.7a9953d8.jpg"
               class="mdc-image-list__item hydrated"
      >
        <div class>
          <img class="mdc-image-list__image"
               alt="fjord"
               src="static/media/trondheim.7a9953d8.jpg"
          >
          <div class="ino-img__fallback-icon">
            <ino-icon class="ino-icon--color-scheme-primary hydrated">
            </ino-icon>
          </div>
        </div>
        <div class="mdc-image-list__supporting">
          <span class="mdc-image-list__label">
            Label
          </span>
        </div>
      </ino-img>
      <ino-img alt="liberty"
               label="Label"
               img-list-item
               src="static/media/waterfall.a7a46e49.jpg"
               class="mdc-image-list__item hydrated"
      >
        <div class>
          <img class="mdc-image-list__image"
               alt="liberty"
               src="static/media/waterfall.a7a46e49.jpg"
          >
          <div class="ino-img__fallback-icon">
            <ino-icon class="ino-icon--color-scheme-primary hydrated">
            </ino-icon>
          </div>
        </div>
        <div class="mdc-image-list__supporting">
          <span class="mdc-image-list__label">
            Label
          </span>
        </div>
      </ino-img>
    </ul>
  </ino-img-list>
</div>
`;

exports[`Graphic/ino-img-list Playground smoke-test 1`] = `
<div id="root-inner">
  <ino-img-list enclose-label="false"
                masonry="false"
                class="hydrated"
  >
    <ul class="mdc-image-list">
      <ino-img alt="beach"
               label="Label"
               img-list-item
               src="static/media/beach.1432d4b3.jpg"
               class="mdc-image-list__item hydrated"
      >
        <div class="mdc-image-list__image-aspect-container">
          <img class="mdc-image-list__image"
               alt="beach"
               src="static/media/beach.1432d4b3.jpg"
          >
          <div class="ino-img__fallback-icon">
            <ino-icon class="hydrated ino-icon--color-scheme-primary">
            </ino-icon>
          </div>
        </div>
        <div class="mdc-image-list__supporting">
          <span class="mdc-image-list__label">
            Label
          </span>
        </div>
      </ino-img>
      <ino-img alt="waterfall"
               label="Label"
               img-list-item
               src="static/media/fjord.a789a6be.jpg"
               class="mdc-image-list__item hydrated"
      >
        <div class="mdc-image-list__image-aspect-container">
          <img class="mdc-image-list__image"
               alt="waterfall"
               src="static/media/fjord.a789a6be.jpg"
          >
          <div class="ino-img__fallback-icon">
            <ino-icon class="hydrated ino-icon--color-scheme-primary">
            </ino-icon>
          </div>
        </div>
        <div class="mdc-image-list__supporting">
          <span class="mdc-image-list__label">
            Label
          </span>
        </div>
      </ino-img>
      <ino-img alt="trondheim"
               label="Label"
               img-list-item
               src="static/media/forrest.0452b993.jpg"
               class="mdc-image-list__item hydrated"
      >
        <div class="mdc-image-list__image-aspect-container">
          <img class="mdc-image-list__image"
               alt="trondheim"
               src="static/media/forrest.0452b993.jpg"
          >
          <div class="ino-img__fallback-icon">
            <ino-icon class="hydrated ino-icon--color-scheme-primary">
            </ino-icon>
          </div>
        </div>
        <div class="mdc-image-list__supporting">
          <span class="mdc-image-list__label">
            Label
          </span>
        </div>
      </ino-img>
      <ino-img alt="forrest"
               label="Label"
               img-list-item
               src="static/media/liberty.ab8cbdf5.jpg"
               class="mdc-image-list__item hydrated"
      >
        <div class="mdc-image-list__image-aspect-container">
          <img class="mdc-image-list__image"
               alt="forrest"
               src="static/media/liberty.ab8cbdf5.jpg"
          >
          <div class="ino-img__fallback-icon">
            <ino-icon class="hydrated ino-icon--color-scheme-primary">
            </ino-icon>
          </div>
        </div>
        <div class="mdc-image-list__supporting">
          <span class="mdc-image-list__label">
            Label
          </span>
        </div>
      </ino-img>
      <ino-img alt="fjord"
               label="Label"
               img-list-item
               src="static/media/trondheim.7a9953d8.jpg"
               class="mdc-image-list__item hydrated"
      >
        <div class="mdc-image-list__image-aspect-container">
          <img class="mdc-image-list__image"
               alt="fjord"
               src="static/media/trondheim.7a9953d8.jpg"
          >
          <div class="ino-img__fallback-icon">
            <ino-icon class="hydrated ino-icon--color-scheme-primary">
            </ino-icon>
          </div>
        </div>
        <div class="mdc-image-list__supporting">
          <span class="mdc-image-list__label">
            Label
          </span>
        </div>
      </ino-img>
      <ino-img alt="liberty"
               label="Label"
               img-list-item
               src="static/media/waterfall.a7a46e49.jpg"
               class="mdc-image-list__item hydrated"
      >
        <div class="mdc-image-list__image-aspect-container">
          <img class="mdc-image-list__image"
               alt="liberty"
               src="static/media/waterfall.a7a46e49.jpg"
          >
          <div class="ino-img__fallback-icon">
            <ino-icon class="hydrated ino-icon--color-scheme-primary">
            </ino-icon>
          </div>
        </div>
        <div class="mdc-image-list__supporting">
          <span class="mdc-image-list__label">
            Label
          </span>
        </div>
      </ino-img>
    </ul>
  </ino-img-list>
</div>
`;
